# AgentSight

./: .gitignore  README.md  pyproject.toml
.github/: README.md  zuza-code-orchestrator.agent.md
.github/agents/: README.md  main.agent.md
.github/context/: README.md  changelog.md  manifest.json
.github/context/current/: active-scope.md  architecture-map.md  assumptions.md  faq.md  (+10 more)
.github/decisions/: ADR-0001-agent-governance.md
.github/gates/: beta-readiness.md  definition-of-done.md  quality-gates.md  regression-gates.md
.github/instructions/: backend.instructions.md  context-loading.instructions.md  documentation.instructions.md  execution.instructions.md  global.instructions.md  validation.instructions.md
.github/prompts/: README.md  audit-current-state.prompt.md  check-gates.prompt.md  deep-dive-topic.prompt.md  docs-sync.prompt.md  execute-next-slice.prompt.md  recover-from-regression.prompt.md  sources-sync.prompt.md
.github/reports/: last-session.md  last-validation.md  readiness-score.md
.github/roadmap/: backlog.md  current-sprint.md  master-roadmap.md  milestones.md
.github/skills/: README.md
.github/workflows/: ci.yml
advanced_screenshot_agent/: __init__.py  annotate.py  capture.py  cli.py  crypto.py  evidence.py  policy.py  redact.py
advanced_screenshot_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
advanced_screenshot_agent/adapters/: __init__.py  playwright.py
agentsight/: __init__.py  annotate.py  capture.py  cleanup.py  cli.py  evidence.py  policy.py  redact.py  report.py
agentsight/adapters/: __init__.py  mss_capture.py  playwright.py
docs/: agent-protocol.md  architecture.md  codex-continuation-prompt.md  full-research-report.md  install-windows.md  privacy-threat-model.md  research-notes.md  roadmap.md
examples/: basic-capture.md  codex-usage.md  playwright-flow.md
skills/: advanced-screenshot-agent.skill.md  agentsight.skill.md
tests/: test_annotate.py  test_capture.py  test_evidence.py  test_playwright.py  test_policy.py  test_redact.py
(+87 files in other folders)
