[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-screenshot-agent"
version = "0.1.0"
description = "Local-first screenshot, redaction and visual evidence layer for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "DM Technology" }]
dependencies = [
  "pillow>=10.0.0",
  "mss>=9.0.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]
ocr = ["pytesseract>=0.3.13"]
vision = ["opencv-python>=4.10.0"]

[project.scripts]
screenshot-agent = "advanced_screenshot_agent.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["advanced_screenshot_agent*"]
exclude = ["tests*", "skills*", "docs*"]
