[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsight"
version = "0.1.0"
description = "Secure vision layer for AI agents: scoped capture, local redaction, audit trails and visual evidence."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "DM Technology" }]
dependencies = [
  "pillow>=10.0.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "build>=1.2.0",
]
capture = ["mss>=9.0.0"]
ocr = ["pytesseract>=0.3.13"]
vision = ["opencv-python>=4.10.0"]
playwright = ["playwright>=1.45.0"]

[project.scripts]
agentsight = "agentsight.cli:main"
screenshot-agent = "agentsight.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["agentsight*", "advanced_screenshot_agent*"]
exclude = ["tests*", "skills*", "docs*", "examples*"]
